# local-drop

./: .gitignore  README.md  local_share.py  pyproject.toml
tests/: test_local_share.py
